crates/tracel-mlir-rs/src/dialect/snapshots/mlir_rs__dialect__scf__tests__compile_execute_region.snap
---
source: crates/mlir-rs/src/dialect/scf.rs
expression: module.as_operation()
---
module {
  func.func @foo() {
    %0 = scf.execute_region -> index {
      %c0 = arith.constant 0 : index
      scf.yield %c0 : index
    }
    return
  }
}
